Added win screen to quiz, also fixed some minor issues, cleared test code, and user can now use enter to confirm button click()

--- a/src/main/webapp/resources/css/quiz_style.css
+++ b/src/main/webapp/resources/css/quiz_style.css
@@ -8,10 +8,9 @@
     border-radius: 10px;
 }
 
-/* #quizBoard
+ #quizBoard
 {
-    background-color: rgba(136, 123, 123, 0.479);
-} */
+}
 
 .answer {
     min-height: 80px;
